# TrafficPulse

./: .gitignore  README.md  SECURITY.md  TRAFFICPULSE_MASTER_SPEC.md  launch.py  pyproject.toml  serve.py
.claude/: launch.json
.github/workflows/: ci.yml
configs/: ontology.yaml
configs/scenes/: example-scene.yaml  schema.yaml
demo/: gate0_rtdetr_validation.py  make_wrong_way_upload_clip.py  run_demo.py
docs/: architecture-review.md  architecture.md  dataset-policy.md  deployment.md  evaluation-protocol.md  ontology.md  phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  scene-configuration.md  windows-verification.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md
experiments/helmet_rtdetr/: __init__.py  builder.py  corpus.py  errors.py  grouping.py  ingestion.py  layout.py  manifest.py  models.py  registry.py  split.py  unified.py
experiments/helmet_rtdetr/convert/: __init__.py  base.py  coco.py  helmet.py
experiments/helmet_rtdetr/evaluation/: __init__.py  accumulator.py  confusion.py  evaluator.py  matching.py  metrics.py  models.py  reports.py
experiments/helmet_rtdetr/rtdetr/: __init__.py  data.py  loop.py  model.py  optim.py  payload.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
registry/: schema.yaml
registry/datasets/: aicity-track5.yaml  anpr-synthetic-indian.yaml  brnocompspeed.yaml  ccpd.yaml  event-evaluation-footage.yaml  helmet-myanmar.yaml  idd.yaml  traffic-signal-rois.yaml
schemas/: Association.schema.json  ConfirmedEvent.schema.json  Detection.schema.json  EvidenceManifest.schema.json  HeadingVsLaneObservation.schema.json  HelmetStateObservation.schema.json  InZoneObservation.schema.json  Observation.schema.json  ReviewCase.schema.json  RiderCountObservation.schema.json  SignalStateObservation.schema.json  SimulatedPenalty.schema.json  SpeedObservation.schema.json  StationaryObservation.schema.json  TemporalState.schema.json  TrackState.schema.json  ViolationHypothesis.schema.json
src/trafficpulse/: __init__.py
tests/: test_import.py
tests/app/: _app_helpers.py  conftest.py  test_app_cancellation.py  test_app_config.py  test_app_dependencies.py  test_app_deployment.py  test_app_errors.py  test_app_events.py  test_app_evidence.py  test_app_health.py  test_app_metrics.py  test_app_no_helmet.py  test_app_overlay.py  test_app_processing.py  test_app_real_inference.py  test_app_registry.py  test_app_triple_riding.py  test_app_upload.py
tests/association/: test_riders.py
tests/classifier/: test_helmet_seam.py  test_zeroshot_helmet.py  test_zeroshot_smoke.py
tests/contracts/: test_construction.py  test_observations.py  test_roundtrip.py  test_schema_export.py  test_validation.py
tests/detector/: test_adapter.py  test_boundary.py  test_config.py  test_determinism.py  test_rtdetr.py  test_rtdetr_smoke.py  test_stub.py
tests/docs/: test_adr_pack.py
tests/engine/: _engine_helpers.py  conftest.py  test_engine_composition.py  test_engine_config.py  test_engine_evidence.py  test_engine_logs.py  test_engine_metrics.py  test_engine_pipeline.py  test_engine_rules.py  test_engine_runner.py  test_engine_scheduler.py  test_engine_sources.py
tests/experiments/: _eval_helpers.py  _rtdetr_helpers.py  _training_helpers.py  conftest.py  test_eval_accumulator.py  test_eval_checkpoint.py  test_eval_confusion.py  test_eval_evaluator.py  test_eval_matching.py  test_eval_metrics.py  test_eval_reports.py  test_helmet_adapters.py  test_helmet_coco.py  test_helmet_corpus.py  test_helmet_grouping.py  test_helmet_ingestion.py  test_helmet_layout.py  test_helmet_manifest.py  test_helmet_provenance.py  test_helmet_registry.py  test_helmet_split.py  test_helmet_unified.py  test_rtdetr_data.py  test_rtdetr_loop.py  test_rtdetr_model.py  test_rtdetr_pretrained_smoke.py  test_training_checkpoint.py  test_training_config.py  test_training_metrics.py  test_training_trainer.py
tests/geometry/: test_polygons.py  test_scene_integration.py  test_segments.py  test_vectors.py
tests/ingestion/: test_video.py
tests/observations/: test_crossing.py  test_heading.py  test_helmet_state.py  test_in_zone.py  test_rider_count.py  test_signal_state.py  test_stationary.py
tests/ontology/: test_ontology.py
tests/overlay/: test_overlay_layout.py  test_overlay_metadata.py  test_overlay_no_helmet_provider.py  test_overlay_renderer.py  test_overlay_theme.py  test_overlay_video.py
tests/perception/: test_perception_motorcycle.py
tests/persistence/: test_event_store.py  test_evidence_stub.py  test_persist_pairs.py  test_persistence_boundary.py  test_u10_u11_integration.py
tests/pipeline/: _helmet_fixtures.py  _pipeline_helpers.py  _slice_fixtures.py  _stopping_fixtures.py  _triple_fixtures.py  test_frame_observer.py  test_helmet_observer.py  test_illegal_stopping_e2e.py  test_illegal_stopping_pipeline.py  test_no_helmet_e2e.py  test_no_helmet_e2e_real.py  test_no_helmet_runner.py  test_pipeline_backends_errors.py  test_pipeline_base.py  test_pipeline_conversion.py  test_pipeline_empty_frame.py  test_pipeline_end_to_end.py  test_pipeline_taint.py  test_provenance_propagation.py  test_slice_e2e_rtdetr.py  test_slice_runner.py  test_triple_riding_e2e.py
tests/registry/: test_registry.py
tests/rules/: test_engine.py  test_episode_enricher.py  test_illegal_stopping.py  test_joins.py  test_no_helmet.py  test_provenance.py  test_states.py  test_temporal_base.py  test_triple_riding.py  test_wrong_way.py
tests/scenes/: test_scene_config.py  test_scene_contract.py
tests/synth/: test_scenarios.py  test_trajectories.py
tests/tracking/: _builders.py  test_heading_compat.py  test_interface.py  test_iou_tracker.py  test_iou_tracker_compat.py  test_sequencing.py  test_track_adapter.py  test_track_boundary.py  test_track_stub.py
tests/viewer/: test_upload_calibration.py
viewer/: README.md  app.py  calibration.py  index.html
(+278 files in other folders)
