[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trafficpulse"
description = "Evidence-first intelligent traffic-violation detection platform (Phase 0-F repository baseline)."
requires-python = ">=3.11"
dynamic = ["version"]
# Pydantic is the sole U2 runtime dependency: it provides the runtime
# validation and deterministic JSON Schema generation the domain contracts
# require. No ML/CV/OCR/video/DB/web dependencies are introduced.
dependencies = [
  "pydantic>=2.5,<3",
]

# NOTE: no `license` field is declared yet. The detector/licence posture
# (permissive vs AGPL) is ADR-001, which is intentionally unresolved at the
# end of Phase 0-F (see docs/architecture-review.md §11, §27). Declaring a
# project licence here would pre-empt that open architectural decision.

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  # PyYAML parses configs/ontology.yaml in the U3 ontology-validation tests.
  # It is a test-only dependency in Phase 0-F: no runtime code loads the
  # ontology yet. A runtime ontology loader (and any promotion of the parser
  # to a runtime dependency) is deferred to Phase 1, keeping runtime deps
  # limited to pydantic.
  "pyyaml>=6",
]

# --- Version single-source: read from src/trafficpulse/__init__.py -----------
[tool.hatch.version]
path = "src/trafficpulse/__init__.py"

# --- src-layout package discovery --------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/trafficpulse"]

# --- Ruff (lint + format) ----------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# --- mypy (static type checking) ---------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
