[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trafficpulse"
description = "Evidence-first intelligent traffic-violation detection platform (Phase 0-F repository baseline)."
requires-python = ">=3.11"
dynamic = ["version"]
# Runtime dependencies:
# - pydantic: runtime validation + deterministic JSON Schema for the U2
#   domain contracts.
# - av (PyAV): the architecture-selected video backend for PTS-accurate decode
#   (architecture-review §151, §17; docs/windows-verification.md). Self-contained
#   FFmpeg wheels (cp311-abi3) install on Windows dev and ubuntu CI without a
#   system FFmpeg. First used by the P1-U5 ingestion layer.
# - numpy: the decoded-frame array payload (RGB uint8) that PyAV's to_ndarray
#   produces and that FrameRecord.image exposes as NDArray[uint8]. PyAV does not
#   depend on numpy transitively, so it is a required *direct* dependency. Capped
#   < 2.2 to preserve the project's Python 3.11 static-analysis floor: numpy
#   >= 2.2 type stubs use PEP 695 `type` statements that mypy rejects under a
#   3.11 target. numpy 2.1.x supports Python 3.11-3.13. No ML/CV framework.
dependencies = [
  "pydantic>=2.5,<3",
  "av>=18,<19",
  "numpy>=1.26,<2.2",
]

# NOTE: no `license` field is declared yet. The detector/licence posture
# (permissive vs AGPL) is ADR-001, which is intentionally unresolved at the
# end of Phase 0-F (see docs/architecture-review.md §11, §27). Declaring a
# project licence here would pre-empt that open architectural decision.

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  # PyYAML parses configs/ontology.yaml in the U3 ontology-validation tests.
  # It is a test-only dependency in Phase 0-F: no runtime code loads the
  # ontology yet. A runtime ontology loader (and any promotion of the parser
  # to a runtime dependency) is deferred to Phase 1, keeping runtime deps
  # limited to pydantic.
  "pyyaml>=6",
]

# --- Version single-source: read from src/trafficpulse/__init__.py -----------
[tool.hatch.version]
path = "src/trafficpulse/__init__.py"

# --- src-layout package discovery --------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/trafficpulse"]

# --- Ruff (lint + format) ----------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# --- mypy (static type checking) ---------------------------------------------
[tool.mypy]
# Kept at the project's declared minimum runtime (requires-python >= 3.11) so
# static analysis validates that floor. numpy is capped < 2.2 (see the
# dependency comment) because numpy >= 2.2 stubs are not parseable under a 3.11
# mypy target.
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
