[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trafficpulse"
description = "Evidence-first intelligent traffic-violation detection platform (Phase 0-F repository baseline)."
requires-python = ">=3.11"
# Project source-code licence: Apache-2.0 (SPDX expression, PEP 639). The full
# standard text lives in the root LICENSE file. This declares the licence of
# TrafficPulse's own source code only; it does NOT relicense datasets, model
# weights, or third-party components — those are governed independently (see the
# "Licensing distinctions" section of README.md and ADR-001).
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version"]
# Runtime dependencies:
# - pydantic: runtime validation + deterministic JSON Schema for the U2
#   domain contracts.
# - av (PyAV): the architecture-selected video backend for PTS-accurate decode
#   (architecture-review §151, §17; docs/windows-verification.md). Self-contained
#   FFmpeg wheels (cp311-abi3) install on Windows dev and ubuntu CI without a
#   system FFmpeg. First used by the P1-U5 ingestion layer.
# - numpy: the decoded-frame array payload (RGB uint8) that PyAV's to_ndarray
#   produces and that FrameRecord.image exposes as NDArray[uint8]. PyAV does not
#   depend on numpy transitively, so it is a required *direct* dependency. Capped
#   < 2.2 to preserve the project's Python 3.11 static-analysis floor: numpy
#   >= 2.2 type stubs use PEP 695 `type` statements that mypy rejects under a
#   3.11 target. numpy 2.1.x supports Python 3.11-3.13. No ML/CV framework.
dependencies = [
  "pydantic>=2.5,<3",
  "av>=18,<19",
  "numpy>=1.26,<2.2",
]

# NOTE: the project source-code licence (Apache-2.0) is declared above via the
# PEP 639 `license`/`license-files` fields. It is a distinct question from the
# detector-stack licence posture — settled separately by ADR-001, Accepted
# (permissive-only; see docs/adr/ADR-001.md, docs/architecture-review.md §11) —
# and does not extend to datasets or model weights, which remain independently
# governed by the U4 registry and their own upstream terms.

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  # PyYAML parses configs/ontology.yaml in the U3 ontology-validation tests.
  # It is a test-only dependency in Phase 0-F: no runtime code loads the
  # ontology yet. A runtime ontology loader (and any promotion of the parser
  # to a runtime dependency) is deferred to Phase 1, keeping runtime deps
  # limited to pydantic.
  "pyyaml>=6",
]

# --- Real detector backend (optional; ADR-001 permissive-only) ----------------
# The RT-DETR backend (src/trafficpulse/detector/rtdetr.py) integrates the
# Apache-2.0 HuggingFace Transformers RT-DETR port. It is OPTIONAL and kept out of
# the base install and CI: torch/transformers are imported lazily and only when the
# real backend is constructed, so the base package, its import graph, and every
# unit test stay ML-free and network-free. No model weights are vendored or
# downloaded by installing this extra; checkpoint acquisition is an explicit,
# operator-driven step (RTDetrConfig.local_files_only defaults to offline).
#
# torchvision + pillow are REQUIRED at runtime by the transformers RT-DETR image
# processor (AutoImageProcessor); they are permissive (torchvision BSD-3-Clause,
# pillow HPND), ADR-001-compatible, and add no AGPL/GPL coupling.
#
# Version floors: the lower bounds are conservative minimums. They were validated
# by the dependency resolver and exercised at runtime on CPython 3.13 during the
# P1-U7 acquisition step (resolved: torch 2.13.0, torchvision 0.28.0, transformers
# 5.13.0, pillow 12.3.0), with numpy held at 2.1.3 (the <2.2 base pin preserved).
# NOTE: this validates the CURRENT interpreter (3.13) only -- the >=3.11 floor is
# still asserted statically (mypy py311) but was not runtime-tested here. Weight/
# pretraining-data provenance remains a per-artifact review (docs/adr/ADR-001.md).
rtdetr = [
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.45",
  "pillow>=10",
]

# --- Version single-source: read from src/trafficpulse/__init__.py -----------
[tool.hatch.version]
path = "src/trafficpulse/__init__.py"

# --- src-layout package discovery --------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/trafficpulse"]

# --- Ruff (lint + format) ----------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# --- mypy (static type checking) ---------------------------------------------
[tool.mypy]
# Kept at the project's declared minimum runtime (requires-python >= 3.11) so
# static analysis validates that floor. numpy is capped < 2.2 (see the
# dependency comment) because numpy >= 2.2 stubs are not parseable under a 3.11
# mypy target.
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# torch / transformers are the optional 'rtdetr' extra, imported lazily inside the
# RT-DETR backend. They ship no/only-partial type information. Treat them as untyped
# regardless of whether they are installed: `ignore_missing_imports` covers the
# base/CI case (extra not installed) and `follow_imports = skip` covers the case
# where they ARE installed (e.g. the P1-U7 verification env) so their untyped
# from_pretrained/etc. calls do not trip strict `disallow_untyped_calls`. This
# narrows only those third-party modules to Any; it does NOT relax strictness for
# any TrafficPulse module.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*"]
ignore_missing_imports = true
follow_imports = "skip"

# PyYAML is a dev-only extra (not a runtime dependency); the P1-U12 runner imports
# it *lazily* only to load a YAML SceneConfig, falling back to JSON otherwise. It
# ships no type stubs, so treat it as untyped whether or not it is installed --
# this narrows only `yaml` to Any and never relaxes strictness for TrafficPulse.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
